Fix: on page search results the grouped result were being hidden on mobile

--- a/src/main/webapp/css/newStyle.css
+++ b/src/main/webapp/css/newStyle.css
@@ -5707,8 +5707,6 @@ body#homepage-landing div#flex-container {
     width: auto; 
 }
 
-.grouped {display: none}
-
 }
 
 body#home-search .url-search-container {
@@ -11613,8 +11611,6 @@ body#homepage-landing div#flex-container {
 #resultados-lista ul {
     width: auto; 
 }
-
-.grouped {display: none}
 
 }
 
